Added productservicetests and fixed getProductDetail()